<?xml version="1.0" encoding="utf-8"?>
<!-- True Cost : intro.xml -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PaddedLayout" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_padding_medium"
        android:gravity="center"
        android:text="@string/intro_welcome"
        android:textAppearance="@style/TextViewHeader" />

    <TextView
        android:id="@+id/intro_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_padding_medium"
        android:text="@string/intro_message"
        android:textAppearance="@style/TextViewParagraph" />

    <LinearLayout style="@style/WeightedLayout" >

        <Button
            android:id="@+id/intro_button_begin"
            style="@style/WeightedView"
            android:text="@string/intro_button_begin" />
    </LinearLayout>

</LinearLayout>